# Server/functions/src/controllers/dtos/lobby.dto.ts
@@ -1,0 +1,8 @@
+export type createLobbyRequestDTO = {
+        hostId:string;
+        gameMap:string;
+        gameMode? :string;
+        hostPosition? :string | null;
+        championId? :string | null;
+        rankFilter? :string[];
+}
